appId: ${PLATFORM_ID}
---
- launchApp: ${PLATFORM_ID}
- tapOn: "Configuration test"
- tapOn: "Just configure"
- runFlow: "../util/back.yaml"

- tapOn: "Handler Test"

# Test non-gated paywall
- tapOn: "Test Non-Gated Paywall"
- assertVisible: "Continue"
- runFlow: "../util/back.yaml"

- assertVisible: "Feature Block Executed: Yes"

# Check events for non-gated
- tapOn: "Show Handler Events"
- assertVisible: "Event 1: OnPresent"
- assertVisible: "Event 2: OnDismiss"
- tapOn: "OK"

# Clear events
- tapOn: "Clear Handler Events"
- assertVisible: "Feature Block Executed: No"

# Test gated paywall
- tapOn: "Test Gated Paywall"
- assertVisible: "Continue"
- runFlow: "../util/back.yaml"

- assertVisible: "Feature Block Executed: No"

# Check events for gated
- tapOn: "Show Handler Events"
- assertVisible: "Event 1: OnPresent"
- assertVisible: "Event 2: OnDismiss"
- tapOn: "OK"

# Clear events
- tapOn: "Clear Handler Events"
- assertVisible: "Feature Block Executed: No"

# Test skip audience
- tapOn: "Test Skip Audience"
- assertVisible: "Feature Block Executed: Yes"

# Check events for skip
- tapOn: "Show Handler Events"
- assertVisible: "Event 1: OnSkip"
- tapOn: "OK"
- stopApp
