appId: ${PLATFORM_ID}
---
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "navigation-back-button"
- runFlow:
    when:
      platform: iOS
      visible: Back
    commands:
      - tapOn: Back
- runFlow:
    when:
      platform: Android
    commands:
      - back
